# musicfree-tauri

./: .gitignore  .oxfmtrc.json  Cargo.toml  README.md  biome.json  index.html  package.json  pnpm-workspace.yaml
.github/workflows/: release.yml
src/: App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json  desktop.windows.json  mobile.json  windows.json
src-tauri/icons/: icon.icns
src-tauri/src/: android.rs  api.rs  cmd.rs  core.rs  error.rs  gist.rs  lib.rs  main.rs  sync.rs
src/api/: audio.ts  index.ts  sync.ts
src/components/: PlatformIcon.tsx  SyncIndicator.tsx  index.ts
src/components/AdaptiveButton/: index.tsx
src/components/AudioCard/: index.tsx
src/components/AudioList/: index.tsx
src/components/BackButton/: index.tsx
src/components/ConfirmProvider/: index.tsx
src/components/CopyButton/: index.tsx
src/components/ErrorBoundary/: index.tsx
src/components/FavoriteButton/: index.tsx
src/components/LoadingFallback/: index.tsx
src/components/MessageProvider/: index.tsx
src/components/MoreActionsDropdown/: index.tsx
src/components/PageErrorBoundary/: index.tsx
src/components/PlayButton/: index.tsx
src/components/PlayModeButton/: index.tsx
src/components/PlayerCard/: index.tsx
src/components/PlayerControls/: index.tsx
src/components/PlaylistCard/: index.tsx
src/components/SkipButton/: index.tsx
src/components/TopNav/: index.tsx
src/contexts/: ConfirmContext.tsx  MessageContext.tsx  NavigationContext.tsx  index.ts
src/hooks/: index.ts  useAdaptiveSize.ts  useConfirm.tsx  useCoverUrl.ts  useSwipe.ts  useTheme.ts  useTheme.tsx
src/pages/: index.ts
src/pages/MusicPage/: index.tsx
src/pages/PlayerPage/: index.less  index.tsx
src/pages/PlaylistsPage/: PlaylistDetail.tsx  index.tsx
src/pages/SearchPage/: SearchBottomBar.tsx  SearchPage.tsx  index.less  index.ts  index.tsx  useDownloadManager.ts  useSearchAudio.ts  useSearchLogic.ts  useSelectionManager.ts
src/pages/SettingsPage/: index.tsx
src/router/: AppLayout.tsx  index.tsx
src/store/: configSlice.ts  index.ts  playbackSlice.ts  searchSlice.ts
src/styles/: index.less  variables.less
src/utils/: audio.ts  bluetooth.ts  cache.ts  clipboard.ts  index.ts  logger.ts  mediaSession.ts
