[workspace]
members = ["src-tauri"]
resolver = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = "release"

[workspace.dependencies]
# ── Serde ──────────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Tauri ──────────────────────────────────────────────────────────────
tauri = { version = "2", features = ["protocol-asset"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"

# ── HTTP ───────────────────────────────────────────────────────────────
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
  "gzip",
  "cookies",
], default-features = false }

# ── Async ──────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── Utilities ──────────────────────────────────────────────────────────
base64 = "0.22"
sanitize-filename = "0.6"
regex = "1"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
md5 = "0.8"
git-version = "0.3"
const-str = "1"
chrono = "0.4"
zip = "8"
walkdir = "2"

# ── MusicFree ──────────────────────────────────────────────────────────
musicfree = { git = "https://github.com/ahaoboy/musicfree", version = "0.1", default-features = false, features = [
  "bilibili",
  "youtube",
] }

# ── Platform-specific ──────────────────────────────────────────────────
jni = "0.22"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"

# ── Patches ───────────────────────────────────────────────────────────
# FIXME: https://github.com/tauri-apps/tauri/issues/14849
[patch.crates-io]
rquickjs = { version = "0.12", git = "https://github.com/ahaoboy/rquickjs.git", branch = "android" }
rquickjs-sys = { version = "0.12", git = "https://github.com/ahaoboy/rquickjs.git", branch = "android" }
rquickjs-core = { version = "0.12", git = "https://github.com/ahaoboy/rquickjs.git", branch = "android" }
rquickjs-macro = { version = "0.12", git = "https://github.com/ahaoboy/rquickjs.git", branch = "android" }

[patch."https://github.com/DelSkayn/rquickjs.git"]
rquickjs = { version = "0.12", git = "https://github.com/ahaoboy/rquickjs.git", branch = "android" }
rquickjs-sys = { version = "0.12", git = "https://github.com/ahaoboy/rquickjs.git", branch = "android" }
rquickjs-core = { version = "0.12", git = "https://github.com/ahaoboy/rquickjs.git", branch = "android" }
rquickjs-macro = { version = "0.12", git = "https://github.com/ahaoboy/rquickjs.git", branch = "android" }
