[package]
name = "musicfree-tauri"
version = "0.1.0"
description = "This is a desktop music player application that provides a seamless music listening experience"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "musicfree_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
qjs = ["musicfree/qjs", "musicfree/bindgen"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# FIXME: ANDROID NOT WORKING WITH REQWEST 0.13
# reqwest = { version = "0.13", features = [
#   "json",
#   "gzip",
#   "rustls-native-certs",
#   "cookies",
# ] }
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
  "gzip",
  "cookies",
], default-features = false }
tokio = { version = "1", features = ["full"] }
regex = "1"
anyhow = "*"
thiserror = "1"
musicfree = { git = "https://github.com/ahaoboy/musicfree", version = "0.1", default-features = false, features = [
  "bilibili",
  "youtube",
  # "qjs",
  # "bindgen",
] }
uuid = { version = "1.0", features = ["v4"] }
md5 = "0.8"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
git-version = "0.3"
const-str = "1"

# FIXME: https://github.com/aws/aws-lc-rs/issues/1006
# [patch.crates-io]
# aws-lc-sys = { git = "https://github.com/zsdsys/aws-lc-rs", branch = "android-getentropy-fix" }

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-media = { version = "0.1" }
tauri-plugin-updater = { version = "2" }
tauri-plugin-single-instance = { version = "2" }
