[package]
name = "musicfree-tauri"
version = "0.1.0"
description = "This is a desktop music player application that provides a seamless music listening experience"
authors = ["ahaoboy"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ahaoboy/musicfree-tauri"
homepage = "https://github.com/ahaoboy/musicfree-tauri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "musicfree_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[features]
default = ["qjs"]
# qjs = ["musicfree/qjs", "musicfree/bindgen"]
qjs = ["musicfree/qjs"]
# boa = ["musicfree/boa", "dep:icu_normalizer"]

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
sanitize-filename = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
musicfree = { workspace = true }
uuid = { workspace = true }
md5 = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
git-version = { workspace = true }
const-str = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-os = { workspace = true }
zip = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
tauri-plugin-updater = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
